--- a/app.css
+++ b/app.css
@@ -13,6 +13,18 @@ html, body {
     position: relative;
   }
 
-  nav {
+  .hero-text {
+    font-size: 36px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    padding: 2%;
+    border: 3px solid white;
+  }
+
+  .hidden {
       display: none;
   }
