--- a/app.css
+++ b/app.css
@@ -6,7 +6,7 @@ html, body {
 .hero-image {
     background-image: url("images/hero-image.JPG");
     background-color: #cccccc;
-    height: 800px;
+    height: 760px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,6 +25,50 @@ html, body {
     border: 3px solid white;
   }
 
-  .hidden {
-      display: none;
+  nav {
+      background-color: black;
+      color: white;
   }
+
+  /* .hidden {
+      display: none;
+  } */
+
+.test {
+   display: flex;
+}
+
+.logo {
+    flex: 1;
+}
+
+.container { 
+    cursor: pointer;
+    float: right;
+    width: 40px;
+}
+
+.bar1, .bar2, .bar3 {
+    width: 30px;
+    height: 4px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
+}
+
+.menu-items {
+    /* display: none; */
+    background-color: purple;
+}
