--- a/app.css
+++ b/app.css
@@ -4,9 +4,9 @@ html, body {
 }
 
 .hero-image {
-    background-image: url("images/hero-image.JPG");
+    background-image: url("images/hero-image-mobile.JPG");
     background-color: #cccccc;
-    height: 760px;
+    height: 667px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,17 +16,18 @@ html, body {
   .hero-text {
     font-size: 36px;
     text-align: center;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    text-shadow: 1px 1px 0px #000;
     padding: 2%;
     border: 3px solid white;
   }
 
   nav {
-      background-color: black;
+      display: none;
       color: white;
   }
 
@@ -36,6 +37,7 @@ html, body {
 
 .test {
    display: flex;
+   background-color: black;
 }
 
 .logo {
@@ -71,4 +73,7 @@ html, body {
 .menu-items {
     /* display: none; */
     background-color: purple;
+    text-align: center;
+    width: 200px;
+    margin: 10% auto;
 }
