--- a/app.css
+++ b/app.css
@@ -6,7 +6,7 @@ html, body {
 .hero-image {
     background-image: url("images/hero-image-mobile.JPG");
     background-color: #cccccc;
-    height: 667px;
+    height: 800px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,14 +26,15 @@ html, body {
     border: 3px solid white;
   }
 
-  nav {
-      display: none;
-      color: white;
+nav {
+    color: white;
+    position: fixed;
+    width: 100%;
   }
 
-  /* .hidden {
+  .hidden {
       display: none;
-  } */
+  }
 
 .test {
    display: flex;
@@ -66,12 +67,11 @@ html, body {
 .change .bar2 {opacity: 0;}
 
 .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
+    -webkit-transform: rotate(45deg) translate(-8px, -6px);
+    transform: rotate(45deg) translate(-8px, -6px);
 }
 
-.menu-items {
-    /* display: none; */
+#menu-items {
     background-color: purple;
     text-align: center;
     width: 200px;
