--- a/app.css
+++ b/app.css
@@ -13,7 +13,7 @@ html, body {
     position: relative;
   }
 
-  .hero-text {
+#hero-text {
     font-size: 36px;
     text-align: center;
     position: fixed;
@@ -32,8 +32,8 @@ nav {
     width: 100%;
   }
 
-  .hidden {
-      display: none;
+.hidden {
+   display: none;
   }
 
 .test {
@@ -45,7 +45,7 @@ nav {
     flex: 1;
 }
 
-.container { 
+.bar-container { 
     cursor: pointer;
     float: right;
     width: 40px;
@@ -74,6 +74,19 @@ nav {
 #menu-items {
     background-color: purple;
     text-align: center;
-    width: 200px;
+    width: 300px;
     margin: 10% auto;
+}
+
+section {
+    text-align: center;
+}
+
+#about {
+    background-color: #FAFAFA;
+}
+
+#about-text {
+    max-width: 90%;
+    margin: 0 auto;
 }
