--- a/app.css
+++ b/app.css
@@ -14,7 +14,7 @@ html, body {
   }
 
 #hero-text {
-    font-size: 36px;
+    font-size: 40px;
     text-align: center;
     position: fixed;
     top: 50%;
@@ -80,13 +80,39 @@ nav {
 
 section {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 #about {
     background-color: #FAFAFA;
+    padding: 6px 0;
 }
 
 #about-text {
     max-width: 90%;
     margin: 0 auto;
+}
+
+#gallery {
+    background-image: url("images/hands.jpg");
+    background-color: #cccccc;
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+
+#enter-gallery {
+    font-size: 20px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 1px 1px 0px #000;
+    padding: 2%;
+    border: 3px solid white;
 }
