--- a/app.css
+++ b/app.css
@@ -80,12 +80,12 @@ nav {
 
 section {
     text-align: center;
-    margin-bottom: 10px;
 }
 
 #about {
     background-color: #FAFAFA;
     padding: 6px 0;
+    margin-bottom: 20px;
 }
 
 #about-text {
@@ -96,18 +96,18 @@ section {
 #gallery {
     background-image: url("images/hands.jpg");
     background-color: #cccccc;
-    height: 200px;
+    height: 250px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
 }
 
 
 #enter-gallery {
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
-    position: absolute;
+    position: relative;
+    max-width: 200px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -115,4 +115,10 @@ section {
     text-shadow: 1px 1px 0px #000;
     padding: 2%;
     border: 3px solid white;
+}
+
+#contact {
+    background-color: #FAFAFA;
+    padding: 10px 0;
+    margin-bottom: 20px;
 }
