--- a/app.css
+++ b/app.css
@@ -122,3 +122,39 @@ section {
     padding: 10px 0;
     margin-bottom: 20px;
 }
+
+.submit {
+    font-size: 20px;
+    margin-right: 15px;
+    padding: 4px;
+    background-color: #28A875;
+    color: white;
+}
+
+.reset {
+    font-size: 20px;
+    padding: 4px;
+    background-color: #DC3545;
+    color: white;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 5px 0;
+}
+
+#copyright {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.footer-links {
+    text-align: center;
+}
+
+.footer-links a {
+    text-decoration: none;
+    color: white;
+    margin-right: 10px;
+}
