added animation to drop down menu

--- a/app.css
+++ b/app.css
@@ -79,15 +79,34 @@ nav {
 #menu-items {
     background-color: black;
     text-align: center;
+    position: relative;
+    left: -100px;
     width: 100%;
     margin: 20% auto;
     font-size: 18px;
     padding-top: 5px;
     padding-bottom: 15px;
+    -webkit-animation: slide 0.5s forwards;
+    animation: slide 0.5s forwards;
+    
 }
+
+@-webkit-keyframes slide {
+    100% { left: 0; }
+}
+
+@keyframes slide {
+    100% { left: 0; }
+}
+
 
 #menu-items div {
     margin-top: 10px;
+}
+
+#menu-items a {
+    color: white;
+    text-decoration: none;
 }
 
 section {
