--- a/app.css
+++ b/app.css
@@ -31,11 +31,17 @@ nav {
     position: fixed;
     width: 100%;
     z-index: 2;
+    transition: opacity;
+	transition-duration: 2s;
   }
+
+.invisible {
+    opacity: 0;
+}
 
 .hidden {
    display: none;
-  }
+}
 
 .test {
    display: flex;
@@ -80,7 +86,7 @@ nav {
     background-color: black;
     text-align: center;
     position: relative;
-    left: -100px;
+    left: -1000px;
     width: 100%;
     margin: 20% auto;
     font-size: 18px;
@@ -88,7 +94,6 @@ nav {
     padding-bottom: 15px;
     -webkit-animation: slide 0.5s forwards;
     animation: slide 0.5s forwards;
-    
 }
 
 @-webkit-keyframes slide {
