--- a/app.css
+++ b/app.css
@@ -6,7 +6,7 @@ html, body {
 .hero-image {
     background-image: url("images/hero-image-mobile.JPG");
     background-color: #cccccc;
-    height: 800px;
+    height: 750px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -27,7 +27,7 @@ html, body {
   }
 
 nav {
-    color: white;
+    color: black;
     position: fixed;
     width: 100%;
     z-index: 2;
@@ -43,9 +43,9 @@ nav {
    display: none;
 }
 
-.test {
+.top-bar {
    display: flex;
-   background-color: black;
+   background-color: white;
 }
 
 .logo {
@@ -65,21 +65,29 @@ nav {
 .bar1, .bar2, .bar3 {
     width: 30px;
     height: 4px;
-    background-color: white;
+    background-color: black;
     margin: 6px 0;
     transition: 0.4s;
 }
 
+#close-menu {
+    position:absolute;
+    top:0;
+    right:0;
+    margin-right: 20px;
+    font-size: 25px;
+}
+
 #menu-items {
-    background-color: black;
+    background-color: white;
     text-align: center;
     position: relative;
     left: -1000px;
     width: 100%;
     margin: 20% auto;
-    font-size: 18px;
-    padding-top: 5px;
-    padding-bottom: 15px;
+    font-size: 20px;
+    padding-top: 15px;
+    padding-bottom: 25px;
     -webkit-animation: slide 0.5s forwards;
     animation: slide 0.5s forwards;
 }
@@ -98,7 +106,7 @@ nav {
 }
 
 #menu-items a {
-    color: white;
+    color: black ;
     text-decoration: none;
 }
 
