--- a/app.css
+++ b/app.css
@@ -16,7 +16,7 @@ html, body {
 #hero-text {
     font-size: 40px;
     text-align: center;
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -206,4 +206,49 @@ footer {
 
 form input {
     margin-bottom: 10px;
+}
+
+.gallery-image {
+    background-image: url("images/mobile-gallery.JPG");
+    background-color: #cccccc;
+    height: 750px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.gallery-text {
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 1px 1px 0px #000;
+    padding: 2%;
+    border: 3px solid white;
+}
+
+.scroll-text {
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 1px 1px 0px #000;
+    padding: 2%;
+}
+
+#bg-gallery {
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+#bg-gallery img{
+    margin-top: 15px;
+    max-width: 100%;
 }
