--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -1,112 +1,3 @@
-html, body {
-    padding: 0;
-    margin: 0;
-}
-
-nav {
-    color: black;
-    position: fixed;
-    width: 100%;
-    z-index: 2;
-    transition: opacity;
-	transition-duration: 2s;
-  }
-
-.invisible {
-    opacity: 0;
-}
-
-.hidden {
-   display: none;
-}
-
-.top-bar {
-   display: flex;
-   background-color: white;
-}
-
-.logo {
-    font-size: 25px;
-    margin-top: 6px;
-    margin-left: 5px;
-    flex: 1;
-    padding-bottom: 5px;
-}
-
-.bar-container { 
-    cursor: pointer;
-    float: right;
-    width: 40px;
-}
-
-.bar1, .bar2, .bar3 {
-    width: 30px;
-    height: 4px;
-    background-color: black;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-
-#close-menu {
-    position:absolute;
-    top:0;
-    right:0;
-    margin-right: 20px;
-    font-size: 25px;
-}
-
-#menu-items {
-    background-color: white;
-    text-align: center;
-    position: relative;
-    left: -1000px;
-    width: 100%;
-    margin: 20% auto;
-    font-size: 20px;
-    padding-top: 15px;
-    padding-bottom: 25px;
-    -webkit-animation: slide 0.5s forwards;
-    animation: slide 0.5s forwards;
-}
-
-@-webkit-keyframes slide {
-    100% { left: 0; }
-}
-
-@keyframes slide {
-    100% { left: 0; }
-}
-
-#menu-items div {
-    margin-top: 10px;
-}
-
-#menu-items a {
-    color: black ;
-    text-decoration: none;
-}
-
-footer {
-    background-color: black;
-    color: white;
-    padding: 5px 0;
-}
-
-#copyright {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.footer-links {
-    text-align: center;
-}
-
-.footer-links a {
-    text-decoration: none;
-    color: white;
-    margin-right: 10px;
-}
-
 .gallery-image {
     background-image: url("../images/mobile-gallery.JPG");
     background-color: #cccccc;
@@ -121,7 +12,7 @@ footer {
     font-size: 40px;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -134,7 +25,7 @@ footer {
     font-size: 40px;
     text-align: center;
     position: absolute;
-    top: 80%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -142,21 +33,21 @@ footer {
     padding: 2%;
 }
 
-#bg-gallery {
+#official-gallery {
     max-width: 90%;
     margin: 0 auto;
 }
 
-#bg-gallery img{
+#official-gallery img{
     margin-top: 15px;
     max-width: 100%;
 }
 
 @media only screen and (min-width: 700px) {
-    #bg-gallery {
+    #official-gallery {
     
     }
-    #bg-gallery img{
+    #official-gallery img{
         max-width: 25%;
     }
 }
