--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -9,7 +9,7 @@
   }
 
 #hero-text {
-    font-size: 40px;
+    font-size: 35px;
     text-align: center;
     position: absolute;
     top: 35%;
@@ -19,6 +19,7 @@
     text-shadow: 1px 1px 0px #000;
     padding: 2%;
     border: 3px solid white;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 section {
@@ -31,9 +32,9 @@ section h1 {
 }
 
 #about {
-    background-color: #FAFAFA;
+    background-color: #eee;
     padding: 6px 0;
-    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 #about-text {
@@ -49,6 +50,7 @@ section h1 {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: -10px;
 }
 
 #enter-gallery {
@@ -57,6 +59,7 @@ section h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 #enter-gallery a {
@@ -70,9 +73,10 @@ section h1 {
 }
 
 #contact {
-    background-color: #FAFAFA;
+    background-color: #eee;
     padding: 10px 0;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 #contact p {
