--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -24,20 +24,22 @@ nav {
 .top-bar {
    display: flex;
    background-color: white;
+   padding-bottom: 5px;
 }
 
 .logo {
     font-size: 25px;
-    margin-top: 6px;
-    margin-left: 5px;
     flex: 1;
-    padding-bottom: 5px;
+    /* padding: 6px; */
+    margin-left: 5px;
+    font-family: 'Corben', cursive;
 }
 
 .bar-container { 
-    cursor: pointer;
     float: right;
-    width: 40px;
+    width: 35px;
+    margin-top: 7px;
+    margin-right: 5px;
 }
 
 .bar1, .bar2, .bar3 {
