--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -19,6 +19,7 @@
     text-shadow: 1px 1px 0px #000;
     padding: 2%;
     border: 3px solid white;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 .scroll-text {
@@ -31,6 +32,7 @@
     color: white;
     text-shadow: 1px 1px 0px #000;
     padding: 2%;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 #official-gallery {
