--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -45,11 +45,11 @@
     max-width: 100%;
 }
 
-@media only screen and (min-width: 700px) {
+/* @media only screen and (min-width: 700px) {
     #official-gallery {
     
     }
     #official-gallery img{
         max-width: 25%;
     }
-}
+} */
