--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -108,3 +108,15 @@ section h1 {
 form input {
     margin-bottom: 10px;
 }
+
+@media only screen and (min-width: 1000px) {
+    .hero-image {
+        background-image: url("../images/hero-image.JPG");
+        height: 900px;
+      }
+    
+    #hero-text {
+        font-size: 45px;
+        top: 40%;
+    }
+}
