--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -35,6 +35,7 @@ nav {
     width: 35px;
     margin-top: 7px;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .bar1, .bar2, .bar3 {
@@ -51,6 +52,7 @@ nav {
     right:0;
     margin-right: 20px;
     font-size: 25px;
+    cursor: pointer;
 }
 
 #menu-items {
@@ -64,8 +66,14 @@ nav {
     padding-top: 15px;
     padding-bottom: 25px;
     -webkit-animation: slide 0.5s forwards;
-    display: none;
+    /* display: none; */
     animation: slide 0.5s forwards;
+    cursor: pointer;
+    letter-spacing: 2px;
+}
+
+.hidden {
+    display: none;
 }
 
 @-webkit-keyframes slide {
@@ -106,10 +114,13 @@ footer {
     margin-right: 10px;
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1024px) {
 
     .logo {
-        font-size: 30px;
+        width: 30%;
+        font-size: 38px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 
     #menu-items {
@@ -117,10 +128,13 @@ footer {
         font-size: 25px;
         background-color: white;
         text-align: initial;
-        position: initial;
+        position: relative;
         left: initial;
-        width: initial;
-        margin: initial;
+        width: 65%;
+        margin-top: 20px;
+        margin-bottom: initial;
+        margin-right: initial;
+        margin-left: initial;
         padding-top: initial;
         padding-bottom: initial;
         -webkit-animation: initial;
@@ -128,13 +142,16 @@ footer {
     }
 
     #menu-items a {
-        margin-left: 20px;
+        font-size: 20px;
+        margin-left: 10px;
     }
 
-    .instagram-link {
-        float: right;
+    #menu-items a:hover {
+        background-color: black;
+        color: white;
+        border: 4px solid black;
+        border: 10px solid black;
     }
-
     .top-bar-desktop {
         background-color: white;
         width: 100%;
@@ -147,11 +164,16 @@ footer {
     }
 
     .instagram-link {
-        margin-left: 700px;
+        margin-left: auto;
+        margin-right: 40px;
     }
 
     .bar-container { 
         display: none;
+    }
+
+    .hidden {
+        display: block;
     }
     
 }
