--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -10,12 +10,12 @@ nav {
     width: 100%;
     z-index: 2;
     transition: opacity;
-	transition-duration: 2s;
+    transition-duration: 2s;
+    background-color: rgba(255, 255, 255, 0.9) !important;
 }
 
 .top-bar {
    display: flex;
-   background-color: white;
    padding-bottom: 5px;
 }
 
@@ -56,7 +56,6 @@ nav {
 }
 
 #menu-items {
-    background-color: white;
     text-align: center;
     position: relative;
     left: -1000px;
@@ -121,12 +120,12 @@ footer {
         font-size: 38px;
         margin-left: 15px;
         margin-right: 15px;
+
     }
 
     #menu-items {
         display: flex;
         font-size: 25px;
-        background-color: white;
         text-align: initial;
         position: relative;
         left: initial;
@@ -152,8 +151,8 @@ footer {
         border: 4px solid black;
         border: 10px solid black;
     }
+
     .top-bar-desktop {
-        background-color: white;
         width: 100%;
         display: flex;
         padding-bottom: 5px;
