--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -11,7 +11,7 @@ nav {
     z-index: 2;
     transition: opacity;
     transition-duration: 2s;
-    background-color: rgba(255, 255, 255, 0.9) !important;
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .top-bar {
