--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -11,11 +11,11 @@ nav {
     z-index: 2;
     transition: opacity;
     transition-duration: 2s;
-    background-color: rgba(255, 255, 255, 0.9);
 }
 
 .top-bar {
    display: flex;
+   background-color: white;
    padding-bottom: 5px;
 }
 
@@ -56,6 +56,7 @@ nav {
 }
 
 #menu-items {
+    background-color: white;
     text-align: center;
     position: relative;
     left: -1000px;
@@ -90,6 +91,12 @@ nav {
     color: black ;
     text-decoration: none;
     cursor: pointer;
+}
+
+#menu-items a:hover {
+    background-color: black;
+    color: white;
+    border: 10px solid black;
 }
 
 footer {
@@ -148,13 +155,13 @@ footer {
     #menu-items a:hover {
         background-color: black;
         color: white;
-        border: 4px solid black;
         border: 10px solid black;
     }
 
     .top-bar-desktop {
         width: 100%;
         display: flex;
+        background-color: white;
         padding-bottom: 5px;
     }
 
