--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -2,7 +2,7 @@
     background-image: url("../images/hero-image-mobile.JPG");
     background-color: #cccccc;
     height: 750px;
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
