--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -10,7 +10,7 @@ nav {
     width: 100%;
     z-index: 2;
     transition: opacity;
-    transition-duration: 2s;
+    transition-duration: 1s;
 }
 
 .top-bar {
@@ -57,15 +57,17 @@ nav {
 #menu-items {
     background-color: white;
     text-align: center;
-    position: relative;
+    position: fixed;
     left: -1000px;
     width: 100%;
     margin: 20% auto;
     font-size: 20px;
     padding-top: 15px;
     padding-bottom: 25px;
-    -webkit-animation: slide 0.5s forwards;
-    animation: slide 0.5s forwards;
+    -webkit-transition: 0.5;
+    transition: 0.5s;
+    -webkit-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
     letter-spacing: 2px;
 }
 
@@ -73,12 +75,8 @@ nav {
     display: none;
 }
 
-@-webkit-keyframes slide {
-    100% { left: 0; }
-}
-
-@keyframes slide {
-    100% { left: 0; }
+.left {
+    left: 0 !important;
 }
 
 #menu-items div {
