--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -187,6 +187,10 @@ form input {
         width: 55%;
     }
 
+    .inputs {
+        font-size: 20px;
+    }
+
     form textarea {
         margin-top: 5px;
         margin-bottom: 5px;
