--- a/stylesheets/nav-footer.css
+++ b/stylesheets/nav-footer.css
@@ -64,8 +64,10 @@ nav {
     font-size: 20px;
     padding-top: 15px;
     padding-bottom: 25px;
-    -webkit-animation: slide 0.5s forwards;
-    animation: slide 0.5s forwards;
+    -webkit-transition: 0.5;
+    transition: 0.5s;
+    -webkit-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
     letter-spacing: 2px;
 }
 
@@ -73,13 +75,17 @@ nav {
     display: none;
 }
 
-@-webkit-keyframes slide {
+.menu-transition {
+    left: 0 !important;
+}
+
+/* @-webkit-keyframes slide {
     100% { left: 0; }
 }
 
 @keyframes slide {
     100% { left: 0; }
-}
+} */
 
 #menu-items div {
     margin-top: 10px;
