--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -40,9 +40,70 @@
     margin: 0 auto;
 }
 
-#official-gallery img{
+#official-gallery img {
     margin-top: 15px;
     max-width: 100%;
+}
+
+#official-gallery img:hover {
+    border: 2px solid black;
+    cursor: pointer;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 20; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+.modal img {
+    position: relative;
+    width: 40%;
+    margin-left: 250px;
+}
+
+/* .modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+} */
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 @media only screen and (min-width: 1000px) {
